<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.eric.represent.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:textColor="#000000"
        android:text="@string/represent"
        android:padding="10dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="250dp"
        android:maxHeight="250dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/logo_content_description"
        android:src="@drawable/represent" />

    <EditText
        android:id="@+id/zipCodeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="5"
        android:hint="@string/hint"
        android:gravity="end"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/locationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" />

        <Button
            android:id="@+id/zipCodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zipcode" />
    </LinearLayout>
</LinearLayout>
