<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:clickable="true"
    android:onClick="goToDetailed4"
    android:background="#2D9CDB">
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/rep_pic_content_desciption"
        android:src="@drawable/beyer" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/imageView1" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/beyer"
            android:padding="10dp"
            android:layout_alignParentTop="true"
            android:id="@+id/textView" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/d"
            android:padding="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/textView4" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#000000"
            android:text="@string/email"
            android:paddingLeft="10dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:id="@+id/textView2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#000000"
            android:text="@string/website"
            android:paddingLeft="10dp"
            android:layout_alignTop="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView3" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/rep4Go"
            android:background="@drawable/arrow"
            android:scaleType="fitCenter"
            android:layout_marginEnd="6dp"
            android:layout_alignTop="@+id/textView3"
            android:layout_alignParentEnd="true" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/twitter"
            android:paddingLeft="10dp"
            android:layout_below="@+id/rep4Go"
            android:layout_alignParentStart="true"
            android:id="@+id/imageView" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#000000"
            android:text='"This is a super, super, long two-line example."'
            android:layout_marginLeft="10dp"
            android:layout_marginRight="12dp"
            android:id="@+id/textView5"
            android:layout_alignTop="@+id/imageView"
            android:layout_toEndOf="@+id/imageView" />
    </RelativeLayout>
</RelativeLayout>